# mib-sib1

./: .gitignore  README.md
asn1_decoder/: sib1_asn1_decoder.c  sib1_asn1_decoder.h
asn1_decoder/asn1_lib/: NR_ARFCN-ValueEUTRA.c  NR_ARFCN-ValueEUTRA.h  NR_ARFCN-ValueNR.c  NR_ARFCN-ValueNR.h  NR_AdditionalSpectrumEmission.c  NR_AdditionalSpectrumEmission.h  NR_BCCH-BCH-Message.c  NR_BCCH-BCH-Message.h  NR_BCCH-BCH-MessageType.c  NR_BCCH-BCH-MessageType.h  NR_BCCH-Config.c  NR_BCCH-Config.h  NR_BCCH-DL-SCH-Message.c  NR_BCCH-DL-SCH-Message.h  NR_BCCH-DL-SCH-MessageType.c  NR_BCCH-DL-SCH-MessageType.h  NR_BWP-DownlinkCommon.c  NR_BWP-DownlinkCommon.h  NR_BWP-UplinkCommon.c  NR_BWP-UplinkCommon.h  NR_BWP.c  NR_BWP.h  NR_CAG-IdentityInfo-r16.c  NR_CAG-IdentityInfo-r16.h  NR_CellAccessRelatedInfo.c  NR_CellAccessRelatedInfo.h  NR_CellIdentity.c  NR_CellIdentity.h  NR_ConnEstFailureControl.c  NR_ConnEstFailureControl.h  NR_ControlResourceSet.c  NR_ControlResourceSet.h  NR_ControlResourceSetId-r16.c  NR_ControlResourceSetId-r16.h  NR_ControlResourceSetId-v1610.c  NR_ControlResourceSetId-v1610.h  NR_ControlResourceSetId.c  NR_ControlResourceSetId.h  NR_ControlResourceSetZero.c  NR_ControlResourceSetZero.h  (+192 more)
cmake_targets/: CMakeLists.txt  build_oai  dft_input.txt  dft_output.txt
cmake_targets/tools/: build_helper
executables/: assertions.h  nr-uesoftmodem.h  nr-uesoftmodem_new.c
openair1/PHY/: defs_RU.h  defs_UE.h  defs_common.h  defs_eNB.h  defs_nr_UE.h  defs_nr_common.h  impl_defs_nr.h  impl_defs_top.h  nw_log.h  phy_extern_nr_ue.h  phy_vars_nr_ue.h  sse_intrin.h
openair1/PHY/CODING/: coding_defs.h  nrLDPC_defs.h  nr_polar_init.c  nr_rate_matching.c
openair1/PHY/CODING/nrPolar_tools/: nr_polar_decoding_tools.c
openair1/PHY/INIT/: nr_init_ue.c  nr_parms.c  phy_init.h
openair1/PHY/MODULATION/: modulation_UE.h  modulation_common.h  nr_modulation.c  nr_modulation.h  slot_fep_nr.c
openair1/PHY/NR_REFSIG/: dmrs_nr.c  dmrs_nr.h  nr_dmrs_rx.c  nr_gen_mod_table.c  nr_gold_ue.c  nr_mod_table.h  refsig_defs_ue.h
openair1/PHY/NR_UE_ESTIMATION/: nr_dl_channel_estimation.c  nr_estimation.h
openair1/PHY/NR_UE_TRANSPORT/: dci_nr.c  nr_compute_tbs_common.c  nr_dlsch_decoding.c  nr_dlsch_demodulation.c  nr_initial_sync.c  nr_pbch.c  nr_sib.c  nr_tbs_tools.c  nr_transport_proto_ue.h  nr_transport_ue.h  pss_nr.c
openair1/PHY/TOOLS/: cadd_vv.c  cdot_prod.c  cmult_sv.c  cmult_vv.c  oai_dfts.c  signal_energy.c  time_meas.h  tools_defs.h
openair1/SCHED_NR_UE/: defs.h  phy_procedures_nr_ue.c
